[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/shaders/blur_shader.tres" type="Material" id=1]
[ext_resource path="res://assets/fonts/digital_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/themes/main_menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://assets/sounds/digital_typing_long.wav" type="AudioStream" id=4]
[ext_resource path="res://entities/level/CompleteScreen.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/digital_medium.tres" type="DynamicFont" id=6]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/MarginContainer/VBoxContainer/Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines/LineLabel:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer:mouse_filter")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines/LinesNumber:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines/LinesNumber:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Score/ScoreLabel:percent_visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Score/ScoreNumber:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/NoReport:percent_visible")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer/ReturnButton:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer/RestartButton:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer/ContinueButton:disabled")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/NoReport:visible")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/HBox:modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/TimeLabel:percent_visible")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "show_buttons"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer/ReturnButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/MarginContainer/VBoxContainer/HBoxContainer/RestartButton:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "check_continue_button"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "show_lines"
length = 1.9
tracks/0/type = "audio"
tracks/0/path = NodePath("Sound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines/LineLabel:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines/LinesNumber:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines/LinesNumber"), "" ],
"method": "animate_number"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "show_no_report"
length = 0.7
tracks/0/type = "audio"
tracks/0/path = NodePath("Sound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/NoReport:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/NoReport:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "show_score"
length = 1.9
tracks/0/type = "audio"
tracks/0/path = NodePath("Sound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.9 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Score/ScoreNumber") ],
"method": "animate_number"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Score/ScoreLabel:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Score/ScoreNumber:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "show_time"
length = 1.8
tracks/0/type = "audio"
tracks/0/path = NodePath("Sound")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.300102,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/HBox/Seconds"), "%02d" ],
"method": "animate_number"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/HBox:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.4, 0.7 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/TimeLabel:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "show_title"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/MarginContainer/VBoxContainer/Label:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("Sound")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0.3 )
}

[node name="CompleteScreen" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer"]
margin_left = 32.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 1048.0
alignment = 1

[node name="Label" type="Label" parent="Background/MarginContainer/VBoxContainer"]
margin_right = 1856.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
custom_fonts/font = ExtResource( 2 )
text = "Level Completed"
align = 1
valign = 1
percent_visible = 0.0

[node name="VBoxContainer" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
margin_top = 204.0
margin_right = 1856.0
margin_bottom = 932.0
size_flags_vertical = 3

[node name="Report" type="VBoxContainer" parent="Background/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 1856.0
margin_bottom = 728.0
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1

[node name="Lines" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report"]
margin_top = 158.0
margin_right = 1856.0
margin_bottom = 186.0
size_flags_horizontal = 3

[node name="LineLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines"]
margin_right = 926.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "Lines of code added"
align = 1
valign = 1
percent_visible = 0.0

[node name="LinesNumber" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Lines"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 930.0
margin_right = 1856.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "00"
align = 1
valign = 1

[node name="cyc" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report"]
margin_top = 286.0
margin_right = 1856.0
margin_bottom = 314.0
size_flags_horizontal = 3

[node name="CycLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/cyc"]
margin_right = 926.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "Cyclomatic Complexity"
align = 1
valign = 1

[node name="CycValue" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/cyc"]
margin_left = 930.0
margin_right = 1856.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "00"
align = 1
valign = 1

[node name="Time" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report"]
margin_top = 414.0
margin_right = 1856.0
margin_bottom = 442.0
size_flags_horizontal = 3

[node name="TimeLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time"]
margin_right = 926.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "Time"
align = 1
valign = 1
percent_visible = 0.0

[node name="HBox" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 930.0
margin_right = 1856.0
margin_bottom = 28.0
size_flags_horizontal = 3
alignment = 1

[node name="Minutes" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/HBox"]
margin_left = 407.0
margin_right = 455.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "00"
align = 1
valign = 1

[node name="Separation" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/HBox"]
margin_left = 459.0
margin_right = 467.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = ":"
align = 1
valign = 1

[node name="Seconds" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Time/HBox"]
margin_left = 471.0
margin_right = 519.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "00"
align = 1
valign = 1

[node name="Score" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report"]
margin_top = 542.0
margin_right = 1856.0
margin_bottom = 570.0
size_flags_horizontal = 3

[node name="ScoreLabel" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Score"]
margin_right = 926.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "Score"
align = 1
valign = 1
percent_visible = 0.0

[node name="ScoreNumber" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer/Report/Score"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 930.0
margin_right = 1856.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 1194 )
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 6 )
text = "20"
align = 1
valign = 1

[node name="NoReport" type="Label" parent="Background/MarginContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 1856.0
margin_bottom = 728.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 6 )
text = "Report is not available in this level"
align = 1
valign = 1
percent_visible = 0.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/VBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 936.0
margin_right = 1856.0
margin_bottom = 1016.0

[node name="ReturnButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 400.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
mouse_default_cursor_shape = 2
disabled = true
text = "Return to main menu"

[node name="Control2" type="Control" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 724.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="RestartButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 728.0
margin_right = 1128.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
mouse_default_cursor_shape = 2
disabled = true
text = "Restart level"

[node name="Control" type="Control" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1132.0
margin_right = 1452.0
margin_bottom = 80.0
size_flags_horizontal = 3

[node name="ContinueButton" type="Button" parent="Background/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1456.0
margin_right = 1856.0
margin_bottom = 80.0
rect_min_size = Vector2( 400, 80 )
mouse_default_cursor_shape = 2
disabled = true
text = "Next level"

[node name="SkipButton" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
flat = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/show_buttons = SubResource( 6 )
anims/show_lines = SubResource( 7 )
anims/show_no_report = SubResource( 5 )
anims/show_score = SubResource( 8 )
anims/show_time = SubResource( 9 )
anims/show_title = SubResource( 3 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "UI_SFX"

[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Background/MarginContainer/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="button_up" from="SkipButton" to="." method="_on_SkipButton_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
